# mp2-lab1-bitfield

./: .clang-tidy  CMakeLists.txt  run_tests.sh
gtest/: CMakeLists.txt
include/: bit_ref.hxx  bitspan.hxx  bitspan_word.hxx  bitvec.hxx  checked_arith.hxx  forward.hxx  idx_iter.hxx
tests/: CMakeLists.txt  bitvec.cxx  main.cxx
